# infinigram-api

./: .dockerignore  .gitignore  README.md  array-setup.md  docker-compose.yaml  main.py  pyproject.toml  skiff.json
.github/workflows/: check.yml
.skiff/: cloudbuild-deploy.yaml  util.libsonnet  webapp.jsonnet
api/: .dockerignore  .env  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
api/demo/: api.py
api/requirements/: ci-requirements.txt  common-requirements.txt  dev-requirements.txt  prod-requirements.txt
api/src/: RFC9457Error.py  camel_case_model.py  config.py  glog.py  health.py  infini_gram_exception_handler.py
api/src/attribution/: __init__.py  attribution_queue_service.py  attribution_request.py  attribution_router.py  attribution_service.py
api/src/attribution/test/: test_span_density.py
api/src/cache/: __init__.py  redis.py
api/src/documents/: __init__.py  documents_router.py  documents_service.py
api/src/infinigram/: __init__.py  index_mappings.py  infini_gram_dependency.py  infinigram_router.py  prev_infinigram_server.py  processor.py  query_infinigram.py
api/src/infinigram/tokenizers/: tokenizer.py  tokenizer_factory.py
api/src/performance_profiling/: __init__.py  profile_request.py
attribution_worker/: Dockerfile  README.md  __init__.py  config.py  get_documents.py  get_span_text.py  pyproject.toml  worker.py  worker_thick.py
compute_stats/: batch.py  batch.sh  main.py  transform.py  wiki.json  worker.py
docs/: CONTRIBUTING.md  indexes.md
indexing/: flan_rulebased_s3_to_weka.sh  index_weka_to_s3_all.sh  index_weka_to_s3_dclm.sh  index_weka_to_s3_nodclm.sh  indexing_dclm.sh  indexing_nodclm.sh  indexing_olmo2-13b-anneal-adapt.sh  indexing_olmo2-32b-anneal-adapt.sh  indexing_olmo2-anneal-adapt.sh  indexing_olmoe-1b-7b-anneal-adapt.sh  indexing_olmoe-adaptation.sh  olmoe-mix.txt  process_tulu3.sh  raw_s3_to_weka.sh  raw_s3_to_weka_all.sh  transform_hf_to_raw.py  transform_hf_to_raw_olmo2.py  transform_hf_to_raw_tulu3.py  transform_raw_adaptation.py  transform_raw_adaptation_olmp2.py
load-test/: README.md  bailey100.json  locustfile-short.py  locustfile.py  pyproject.toml  short-messages.json
otel-collector/: otel-collector-config.yaml
proxy/: Dockerfile  local.conf  nginx.conf  prod.conf  proxy.conf
schema/: local.sql
scripts/: bailey100.py  compute_correlation.py  distrib_of_score.py  easyapi_test.py  eval_corpuslink_relevance.py  issue_request.py  repro_ui.py  sample_wildbench.py  stress_test_api.py  test_span_density.py
volume-claims/: dolma-1_7-llama.yaml  infinigram-storage-class.yaml  olmoe-mix-0924-dclm.yaml  olmoe-mix-0924-nodclm.yaml  olmoe-mix-0924.yaml  pileval-gpt2.yaml  v4-olmo-2-0325-32b-anneal-adapt.yaml  v4-olmo-2-1124-13b-anneal-adapt.yaml  v4-olmoe-0125-1b-7b-anneal-adapt.yaml  v4-tulu-3-405b-adapt-llama.yaml  v4-tulu-3-70b-adapt-llama.yaml  v4-tulu-3-8b-adapt-llama.yaml  v4-tulu-v3-1-mix.yaml  v4-ultrafeedback.yaml  writer-pod.yaml
