[project]
name = "root"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = ["api", "attribution_worker", "packages/*"]

[tool.uv.sources]
infini-gram = [
    { path = "vendor/infini_gram-2.5.1-cp312-cp312-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin' and python_version == '3.12' and platform_machine == 'arm64'" },
    { path = "vendor/infini_gram-2.5.1-cp313-cp313-macosx_11_0_arm64.whl", marker = "sys_platform == 'darwin' and python_version == '3.13' and platform_machine == 'arm64'" },
    { path = "vendor/infini_gram-2.5.1-cp312-cp312-macosx_10_15_x86_64.whl", marker = "sys_platform == 'darwin' and python_version == '3.12' and platform_machine == 'x86_64'" },
    { path = "vendor/infini_gram-2.5.1-cp313-cp313-macosx_10_15_x86_64.whl", marker = "sys_platform == 'darwin' and python_version == '3.13' and platform_machine == 'x86_64'" },
    { path = "vendor/infini_gram-2.5.1-cp312-cp312-manylinux_2_17_x86_64.manylinux2014_x86_64.whl", marker = "sys_platform == 'linux'" },
]
infini-gram-processor = { workspace = true }

[dependency-groups]
dev = ["mypy>=1.15.0", "pytest>=8.3.5", "ruff>=0.11.0"]

[tool.pyright]
pythonVersion = "3.12"

[tool.ruff]
exclude = [
    ".venv",
    ".vscode",
    ".github",
    "venv",
    "vendor",
    "indexing",
    "compute_stats",
    "scripts",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]

files = ['./api', './attribution_worker', 'packages/*']

exclude = ['vendor', 'indexing', 'compute_stats', 'scripts']

strict = true

[[tool.mypy.overrides]]
module = ["src.glog"]
disable_error_code = ['type-arg', 'no-untyped-def', 'no-untyped-call']
